--- a/SingleAlbumApp/app/build.gradle
+++ b/SingleAlbumApp/app/build.gradle
@@ -16,6 +16,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures.viewBinding = true
+
     buildTypes {
         release {
             minifyEnabled false
@@ -41,6 +43,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // viewModel/liveData
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
 
     // recycler
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
